# Morphological_Image_Processing

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  main.py  mainAll.py  mainPaper.py  mainPaper2.py
settings/: config.json
src/: main.cpp
